# proton-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  admin_key.pub  db_initial  gn_test_key  key  key.pub  reset_sql.txt
db_backups/: db_layout_20161121  db_layout_20161122  stable_1129  stable_1130
layouts/: initial_layout.json  key.pub  test_layout.json  working_layout_1126.json  working_layout_1129.json
patches/: patch_1129.json  patch_1130.json  patch_1201-final.json  patch_1201.json  patch_1202.json  patch_1203.json  patch_GN.json  patch_GN_20170129_1541.json  patch_GN_20170129_1646.json  patch_working.json
src/: error.rs  init.rs  layout.rs  lib.rs  main.rs  permissions.rs  project.rs  project_types.rs  sequence.rs  user.rs  utils.rs
src/dao/: channel_dao_postgres.rs  daos.rs  daos_postgres.rs  data_dao_postgres.rs  fixture_dao_postgres.rs  layout_dao_postgres.rs  mod.rs  permission_dao_postgres.rs  postgres_util.rs  project_dao_postgres.rs  section_dao_postgres.rs  sequence_dao_postgres.rs  user_dao_postgres.rs
src/init/: mod.rs
src/project_types/: channel.rs  channel_section.rs  file_layout.rs  file_patch.rs  fixture.rs  layout.rs  mod.rs  permission_enum.rs  permissions.rs  playlist_data.rs  project.rs  section.rs  sequence.rs  sequence_data.rs  sequence_section.rs  user.rs
tests/: get_layoutid.rs  get_permissions.rs  get_userid.rs  id_user.rs  initialize_project.rs  lib.rs  new_sequence.rs  new_user.rs  remove_sequence.rs  remove_user.rs  resection_sequence.rs  set_permission.rs
tests/common/: keys.rs  mod.rs  rsa_keys.rs  sequence_sections.rs  setup.rs
tests/dao/: channel_dao_testing.rs  data_dao_testing.rs  fixture_dao_testing.rs  layout_dao_testing.rs  mod.rs  permission_dao_testing.rs  project_dao_testing.rs  section_dao_testing.rs  sequence_dao_testing.rs  user_dao_testing.rs
tests/rsa_keys/: bad_pub_key.pem  good_key.pem  good_key.pub  good_key2.pem  (+1 more)
tests_old/: get_permissions.rs  initialize_project.rs  new_sequence.rs  remove_sequence.rs  set_permission.rs
(+4 files in other folders)
