[package]
name = "proton_cli"
version = "0.1.0"
authors = ["Ramith Jayatilleka <ramith.jayatilleka@gmail.com>, Ryan Fredlund <fredl027@umn.edu>, Kelly Larson <lars4986@umn.edu> "]
description = "Command line utility for managing ProtonLights projects."
homepage = "https://github.com/ProtonLights/cli"
repository = "https://github.com/ProtonLights/cli"
readme = "README.md"
license = "MIT"

[dependencies]
docopt = "0.6"
openssl = "~0.7"
sfml = "0.11.2"
git2 = "0.4.2"
rustc-serialize = "0.3.18"
regex = "0.1.71"

[dev-dependencies]
tempdir = "0.3.4"

[[bin]]
name = "proton"
