[package]
name = "proton_cli"
version = "0.1.1"
authors = ["Ramith Jayatilleka <ramith.jayatilleka@gmail.com>, Ryan Fredlund <fredl027@umn.edu>, Kayla Engelstad <engel813@umn.edu> , Vlad Kuksenko <Kukse004@umn.edu>"]
description = "Command line utility for managing ProtonLights projects."
homepage = "https://github.com/ProtonLights/cli"
repository = "https://github.com/ProtonLights/cli"
readme = "README.md"
license = "MIT"

[dependencies]
docopt = "0.6.86"
openssl = "~0.7"
sfml = "0.11.2"
git2 = "0.4.2"
rustc-serialize = "0.3.18"
regex = "0.1.71"
postgres = "0.13"

[dev-dependencies]
tempdir = "0.3.4"

[[bin]]
name = "proton"
