[package]
name = "proton_cli"
version = "0.19.1"
authors = ["Ramith Jayatilleka <ramith.jayatilleka@gmail.com>, Ryan Fredlund <fredl027@umn.edu>, Kayla Engelstad <engel813@umn.edu> , Vlad Kuksenko <Kukse004@umn.edu>"]
description = "Command line utility for managing ProtonLights projects."
homepage = "https://github.com/ProtonLights/cli"
repository = "https://github.com/ProtonLights/cli"
readme = "README.md"
license = "MIT"

[dependencies]
docopt = "0.6.*"
openssl = "0.*"
sfml = "0.*"
rustc-serialize = "0.3.*"
regex = "0.*"
postgres = {version="0.*", features = ["with-rustc-serialize"]}

[dev-dependencies]
tempdir = "0.*"

[[bin]]
name = "proton"
path = "src/main.rs"
